# Render

./: CMakeLists.txt  Canvas.h  Interpreter.cpp  Interpreter.h  Interpritator.h  args_structs.h  main.cpp
Fabrics/: CircleFabric.h  FigureFabric.h  RectangleFabric.h  SquareFabric.h  TriangleFabric.h  fabric.cpp
figures/: Circle.h  Rectangle.h  Triangle.h  figure.cpp  figure.h
